--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,5 +1,5 @@
 [testgroup]
-testhost ansible_host=172.31.47.54
+testhost ansible_connection=local
 
 [testgroup2]
 testhost2 ansible_host=172.31.44.245
