--- a/ansible/OS_Patch_Check_Emailed.yml
+++ b/ansible/OS_Patch_Check_Emailed.yml
@@ -7,7 +7,7 @@
     email_sender: jerrar6382@gmail.com
     smtp_server: smtp.gmail.com
     smtp_port: 587
-    smtp_user: Jerrar6382@gmail.com
+    smtp_user: jerrar6382@gmail.com
     smtp_pass: Jn@n$ng2025
     smtp_use_tls: true
 
