--- a/ansible/OS_Patch_Check_Emailed.yml
+++ b/ansible/OS_Patch_Check_Emailed.yml
@@ -8,7 +8,7 @@
     smtp_server: smtp.gmail.com
     smtp_port: 587
     smtp_user: jerrar6382@gmail.com
-    smtp_pass: Jn@n$ng2025
+    smtp_pass: cjcsrpbivsioonyy
     smtp_use_tls: true
 
   tasks:
